# image-converter

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.ps1
images/: Sheriff_labrador2.avif
src/: config.rs  error.rs  main.rs
src/domain/: image_processing.rs  mod.rs
src/web/: handlers.rs  mod.rs
