[package]
name = "image-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
serde = {version = "1.0.228", features = ["derive"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
libvips = "1.7.1"
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.20", features = ["env-filter", "json"]}
tikv-jemallocator = "0.6.1"
anyhow = "1.0.100"
thiserror = "2.0.17"
serde_json = "1.0.145"
tower-http = {version = "0.6.6", features = ["cors", "trace", "timeout", "compression-full"]}
tower = {version= "0.5.2", features=["timeout"]}
